<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="inh_hint">身高/m</string>
    <string name="inw_hint">体重/kg</string>
    <string name="out_hint">BMI计算器</string>
    <string name="txt01_label" translatable="false">Team A</string>
    <string name="txt201_label" translatable="false">Team B</string>
    <string name="btn03_label" translatable="false">+1</string>
    <string name="btn02_label" translatable="false">+2</string>
    <string name="btn01_label" translatable="false">+3</string>
    <string name="btn_reset" translatable="false">reset</string>
    <string name="btn_config" translatable="false">config</string>
    <string name="btn_dollar" translatable="false">dollar</string>
    <string name="btn_euro" translatable="false">euro</string>
    <string name="btn_won" translatable="false">won</string>
    <string name="btn_conver" translatable="false">conver</string>
    <string name="btn_save" translatable="false">save</string>
    <string name="menu_setting" translatable="false">setting</string>
</resources>