<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/dollar_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:textSize="40dp"
            android:text="@string/btn_dollar" />

        <EditText
            android:id="@+id/euro_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="40dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/btn_euro" />

        <EditText
            android:id="@+id/won_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="40dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/btn_won" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:onClick="save"
            android:text="@string/btn_save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>