<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:textSize="40dp"
            android:inputType="numberDecimal"
            android:text="请输入" />

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:gravity="center"

            android:text="结果" />

        <Button
            android:id="@+id/dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:onClick="click"
            android:text="@string/btn_dollar" />

        <Button
            android:id="@+id/euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:onClick="click"
            android:text="@string/btn_euro" />

        <Button
            android:id="@+id/won"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:onClick="click"
            android:text="@string/btn_won" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40dp"
            android:onClick="openOne"
            android:text="@string/btn_config" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>