<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="392dp"
    android:layout_height="587dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.22000003">
    <LinearLayout
        android:layout_width="194dp"
        android:layout_height="545dp"
        android:padding="8dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/txt01_label"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/score1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textSize="60dp" />
        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/btn03_label" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/btn02_label" />
        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/btn01_label" />
    </LinearLayout>
    <TextView
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_light" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="546dp"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/txt201_label"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/score2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textSize="60dp" />
        <Button
            android:id="@+id/btn03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickB"
            android:text="@string/btn03_label" />
        <Button
            android:id="@+id/btn02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickB"
            android:text="@string/btn02_label" />
        <Button
            android:id="@+id/btn01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickB"
            android:text="@string/btn01_label" />
    </LinearLayout>
</LinearLayout>
<Button
android:id="@+id/button16"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Button"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.498"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="0.885" />
   </android.support.constraint.ConstraintLayout>